# vos

./: .clang-format  CMakeLists.txt  README.md  bootx64.c  bootx64.inf  def.asm  ept.c  ept.h  format.sh  npt.c  npt.h  page.h  sdk.asm  sdk.h  svm.asm  svm.c  svm.h  vmclient.c  vmclient.h  vmx.asm  vmx.c  vmx.h  vmx.nasm  vos.c  vos.dsc  vos.h  vos.inf  vostd.c  vostd.h  x86_64.h  x86_64.nasm
include/: vos.asm
